--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,30 @@
 .ns {
     font-family: 'Noto Serif', serif;
 }
+
+body{
+    margin: 0px;
+}
+main{
+    margin: 20px;
+}
+.navbar ul{
+    list-style-type: none;
+    background-color: gray;
+    padding: 0px;
+    margin: 0px;
+    overflow: hidden;
+}
+.navbar a{
+    color: white;
+    text-decoration: none;
+    padding: 15px;
+    display: block;
+    text-align: center;
+}
+.navbar a:hover{
+    background-color: beige;
+}
+.navbar li{
+    float: left;
+}
